Fixes issue search form hiding when current_user is nil (guest user)
Fixes the bottom margin of .nav-controls > form (issues list search/filter form) so when a guest views on the field on mobile it is not squished against the issues list

Updated CHANGELOG

navigation tabs and navigation filter search will now stay on the same row until there is no space to

Removed unneeded media queries

--- a/app/assets/stylesheets/framework/nav.scss
+++ b/app/assets/stylesheets/framework/nav.scss
@@ -171,6 +171,7 @@
     > form {
       display: inline-block;
       margin-top: -1px;
+      margin-bottom: 12px;
     }
 
     .icon-label {
@@ -207,7 +208,7 @@
 
     @media (max-width: $screen-xs-max) {
       padding-bottom: 0;
-
+      width: 100%;
       .btn, form, .dropdown, .dropdown-menu-toggle, .form-control {
         margin: 0 0 10px;
         display: block;
@@ -236,16 +237,6 @@
       .project-item-select-holder {
         display: block;
         margin: 0;
-      }
-    }
-
-    /* Small devices (tablets, 768px and lower) */
-    @media (max-width: $screen-sm-max) {
-      width: 100%;
-      text-align: left;
-
-      input {
-        width: 300px;
       }
     }
   }
